# truth_42_sim

inc/: truth_42_data_point.hpp  truth_42_data_provider.hpp  truth_42_hardware_model.hpp
src/: CMakeLists.txt  README.md  truth_42_data_point.cpp  truth_42_data_provider.cpp  truth_42_hardware_model.cpp
src/inc/: truth_42_data_provider.hpp
